# nfctest

./: CMakeLists.txt  LICENSE  README.md  clickable.yaml  main.cpp  manifest.json.in  nfctest.desktop.in
plugins/: CMakeLists.txt
plugins/Example/: example.cpp  example.h  reader.cpp
plugins/Example2/: CMakeLists.txt  example2.cpp  example2.h  plugin.cpp  plugin.h
po/: nfctest.aslf.pot
qml/: Main.qml
